--- a/src/components/LogItem/style.css
+++ b/src/components/LogItem/style.css
@@ -20,25 +20,33 @@
 }
 
 .log-item div:nth-child(2) {
-  width: 15%;
+  width: 10%;
 }
 
 .log-item div:nth-child(3) {
-  width: 15%;
+  width: 10%;
 }
 
 .log-item div:nth-child(4) {
-  width: 15%;
+  width: 10%;
 }
 
 .log-item div:nth-child(5) {
-  width: 15%;
+  width: 10%;
 }
 
 .log-item div:nth-child(6) {
-  width: 25%;
+  width: 10%;
 }
 
 .log-item div:nth-child(7) {
+  width: 20%;
+}
+
+.log-item div:nth-child(8) {
   width: 10%;
+}
+
+.log-item div:nth-child(9) {
+  width: 15%;
 }
